# vault-sync

./: Cargo.toml  GEMINI.md  README.md  vault-sync.example.yaml
docker/: Dockerfile  Dockerfile.cross
install/helm/vault-sync/templates/: deployment.yaml
src/: audit.rs  config.rs  main.rs  sync.rs
vault-rs/: Cargo.toml  README.md
vault-rs/src/client/: mod.rs
